Added lombok config and fixed code smells